@@ -1,5 +1,10 @@
 2002-08-03 Baptiste Lepilleur <gaiacrtn@free.fr>
 
+  * include/cppunit/XmlOutputterHook.h: integrated Stephan Stapel 
+    documentation update.
+
+2002-08-03 Baptiste Lepilleur <gaiacrtn@free.fr>
+
   * include/cppunit/Exception.h:
   * src/cppunit/Exception.h: added setMessage().
 
